# online-cinema

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
app/: config.py  database.py  dependencies.py  main.py
app/core/: cache.py  config.py  database.py  jwt.py  security.py
app/core/exceptions/: __init__.py  base.py  token.py  user.py
app/crud/: __init__.py  user.py
app/managers/: __init__.py  base.py  movie.py  review.py  user.py
app/models/: __init__.py  base.py  cast.py  enums.py  generic.py  genre.py  movie.py  user.py
app/routers/: __init__.py  auth.py  movie.py  user.py
app/schemas/: __init__.py  generic.py  movie.py  review.py  token.py  user.py
app/services/: __init__.py  base.py  movie.py  review.py  user.py
migrations/: env.py
migrations/versions/: 2024_05_05_0833-ef966b2e7ccd_add_reviews_and_other_tables.py  34ce9ec855c0_first_migration.py  ddefb67665f8_movies_and_users.py
redis/: redis.conf
