[tool.poetry]
name = "online-cinema"
version = "0.1.0"
description = ""
authors = ["Eugene Snopok <eugenesnopok@gmail.com>"]
readme = "README.md"
packages = [{include = "online_cinema"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.7"}
pylint-pydantic = "^0.1.8"
asyncpg = "^0.27.0"
alembic = "^1.10.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pyright = "^1.1.303"

[tool.pylint.main]
load-plugins = ["pylint_pydantic"]
extension-pkg-whitelist = ["pydantic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
